CLO-27093 - CTE - snowflake tests fail on java 17
- all the command lines have a flag to allow snowflake to run on java 17